--- a/sample02_t.html
+++ b/sample02_t.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- sample02  -->
     <script src="js/sample02_t.js"></script>
   </body>
 </html>
