--- a/practice01.html
+++ b/practice01.html
@@ -6,6 +6,10 @@
     <title>電卓</title>
 </head>
 <body>
-    
+    <form action="practice01.html" method="post"></form>
+    <div id="number">
+        <p><input type="number" class="num1" size="10"></p>
+        <p><input type="number" class="num2" size="10"></p>
+    </div>
 </body>
 </html>
